Finished up the graph store protocol insert tests